Category Image alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1034,7 +1034,7 @@ select {
 /* SUPER CATEGORIES */
 
 .snip1581 {
-  width: 100%;
+  width: 80%;
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -1053,8 +1053,7 @@ select {
 }
 
 .snip1581 img {
-  width: auto;
-  max-width: 100%;
+  width: 100%;
   object-fit: cover;
   vertical-align: top;
 }
@@ -1067,7 +1066,7 @@ select {
 
 .snip1581 figcaption {
   position: absolute;
-  top: 0;
+  top: 10;
   bottom: 0;
   left: 0;
   right: 0;
